fix(ediscovery): hide pro pack features behind feature toggle

--- a/app/modules/ediscovery/ediscovery.scss
+++ b/app/modules/ediscovery/ediscovery.scss
@@ -460,7 +460,7 @@
         }
 
         .input-section {
-          padding-bottom: 1.5rem;
+          padding-bottom: 2.5rem;
 
           .report-name {
             width: 100%;
